# mk-call-merge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  rel4-linux-kit  rust-toolchain.toml
.cargo/: config.toml
blk-task/: Cargo.toml
blk-task/src/: entry.S  lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  ipcrw.rs  lib.rs  log_impl.rs  macros.rs  obj_allocator.rs  page.rs  root.rs  slot.rs
crates/libc-core/: Cargo.toml
crates/sel4-sys/: Cargo.toml
crates/sel4-ulib/: Cargo.toml
crates/srv-gate/: Cargo.toml
ext4-srv/: Cargo.toml
ext4-srv/src/: entry.S  ipc.rs  main.rs  service.rs
http-boot/: autoexec.ipxe  boot_sel4.c  root-task
lcl/: Cargo.toml
lcl/src/: child_test.rs  entry.S  exception.rs  lib.rs  main.rs  timer.rs
lcl/src/arch/: mod.rs
lcl/src/arch/x86_64/: context.rs  mod.rs
lcl/src/consts/: fd.rs  mod.rs  task.rs
lcl/src/device/: mod.rs  uart.rs
lcl/src/fs/: ipc_client.rs  mod.rs  pipe.rs
lcl/src/fs/devfs/: mod.rs
lcl/src/syscall/: exec.rs  fs.rs  mm.rs  mod.rs  signal.rs  sys.rs  thread.rs
lcl/src/task/: file.rs  info.rs  init.rs  loader.rs  mem.rs  mod.rs  pcb.rs  runner.rs  signal.rs
lcl/src/utils/: blk.rs  mod.rs  obj.rs  page.rs
lwext4-task/: Cargo.toml
lwext4-task/src/: entry.S  imp.rs  lib.rs  main.rs
root-task/: Cargo.toml
root-task/src/: allocator.rs  benchmark.rs  entry.S  main.rs  print.rs  slot.rs
support/: sel4-uefi-boot.patch
support/targets/: x86_64-sel4.json
tools/: add-pvh-note.py  build-loader.py  create_alpine_ext4.sh  mk-bzimage.py  mkimage.py
(+17 files in other folders)
