[package]
name = "ext4-srv"
version = "0.1.0"
edition = "2024"
description = "ext4 filesystem service for seL4 - provides file operations via IPC"

[dependencies]
sel4-sys = { path = "../crates/sel4-sys" }
common = { path = "../crates/common" }
blk-task = { path = "../blk-task" }
lwext4-task = { path = "../lwext4-task" }
spin = "0.9"
log = "0.4"
